force-app/main/default/objects/AcctPlanProdStrategyPort__c/AcctPlanProdStrategyPort__c.object-meta.xml
<CustomObject>
    <label>Account Plan Product Strategy Port</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Plan Product Strategy Port Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plan Product Strategy Ports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>