force-app/main/default/objects/AcctPlanProdStrategyPort__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AccountId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>