force-app/main/default/objects/AcctPlanProdStrategyPort__c/fields/AccountId_PE__c.field-meta.xml
<CustomField>
    <fullName>AccountId_PE__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>AccountId_PE</label>
    <length>18</length>
    <type>Text</type>
</CustomField>