force-app/main/default/objects/AcctPlanProdStrategyPort__c/fields/AccountPlanYear__c.field-meta.xml
<CustomField>
    <fullName>AccountPlanYear__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AccountPlanYear</label>
    <length>4</length>
    <type>Text</type>
</CustomField>