force-app/main/default/objects/AcctPlanProdStrategyPort__c/fields/Adjust_NI__c.field-meta.xml
<CustomField>
    <fullName>Adjust_NI__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Adjust NI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>