force-app/main/default/objects/AcctPlanProdStrategyPort__c/fields/AnnualizedPerformance__c.field-meta.xml
<CustomField>
    <fullName>AnnualizedPerformance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AnnualizedPerformance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>