force-app/main/default/objects/AcctPlanProdStrategyPort__c/fields/AsOfDate__c.field-meta.xml
<CustomField>
    <fullName>AsOfDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AsOfDate</label>
    <type>DateTime</type>
</CustomField>