force-app/main/default/objects/AcctPlanProdStrategyPort__c/fields/AspirationSOW__c.field-meta.xml
<CustomField>
    <fullName>AspirationSOW__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AspirationSOW</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>