force-app/main/default/objects/AcctPlanProdStrategyPort__c/fields/CompareSOW__c.field-meta.xml
<CustomField>
    <fullName>CompareSOW__c</fullName>
    <formula>ExpectedSOWPercent__c  -  AspirationSOW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CompareSOW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>