force-app/main/default/objects/AcctPlanProdStrategyPort__c/fields/ExistingSOW__c.field-meta.xml
<CustomField>
    <fullName>ExistingSOW__c</fullName>
    <formula>ROUND(
if(WalletSizing__c == 0,0, ( Adjust_NI__c / WalletSizing__c)*100) ,4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Existing SOW</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>