force-app/main/default/objects/AcctPlanProdStrategyPort__c/fields/ExpectedIncrementalNI__c.field-meta.xml
<CustomField>
    <fullName>ExpectedIncrementalNI__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ExpectedIncrementalNI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>