force-app/main/default/objects/AcctPlanProdStrategyPort__c/fields/ExpectedIncrementalNIFreeText__c.field-meta.xml
<CustomField>
    <fullName>ExpectedIncrementalNIFreeText__c</fullName>
    <label>ExpectedIncrementalNIFreeText</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>