force-app/main/default/objects/AcctPlanProdStrategyPort__c/fields/ExpectedIncrementalNIFromStep5__c.field-meta.xml
<CustomField>
    <fullName>ExpectedIncrementalNIFromStep5__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ExpectedIncrementalNIFromStep5</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>