force-app/main/default/objects/AcctPlanProdStrategyPort__c/fields/ExpectedSOWPercent__c.field-meta.xml
<CustomField>
    <fullName>ExpectedSOWPercent__c</fullName>
    <formula>ROUND(
if(WalletSizing__c == 0,0, TotalCompanyNI__c / WalletSizing__c) * 100 ,4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ExpectedSOWPercent</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>