force-app/main/default/objects/AcctPlanProdStrategyPort__c/fields/GroupCompany__c.field-meta.xml
<CustomField>
    <fullName>GroupCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Group Company</description>
    <label>GroupCompany</label>
    <referenceTo>Group__c</referenceTo>
    <relationshipLabel>Account Plan Product Strategy Ports</relationshipLabel>
    <relationshipName>Account_Plan_Product_Strategy_Ports</relationshipName>
    <type>Lookup</type>
</CustomField>