force-app/main/default/objects/AcctPlanProdStrategyPort__c/fields/SEQ__c.field-meta.xml
<CustomField>
    <fullName>SEQ__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SEQ</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>