force-app/main/default/objects/AcctPlanProdStrategyPort__c/fields/WalletSizing__c.field-meta.xml
<CustomField>
    <fullName>WalletSizing__c</fullName>
    <defaultValue>0</defaultValue>
    <label>WalletSizing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>