force-app/main/default/objects/AcctPlanProdStrategyPort__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Year</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>